hphp/hack/test/typecheck/classname/typename_no_new.php.exp
File "typename_no_new.php", line 13, characters 14-15:
Was expecting a class, but got a string (Typing[4026])
File "typename_no_new.php", line 13, characters 10-17:
Invalid return type (Typing[4110])
  File "typename_no_new.php", line 12, characters 42-47:
  Expected `C`
  File "typename_no_new.php", line 13, characters 14-15:
  But got `dynamic`, the result of constructing an object with a `dynamic` type
